--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     />
 
     
-    <title>Paper Kit </title>
+    <title>A+ COUNSELLING & CONSULTING, LLC</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="/path/to/parallax.js"></script>
